docs/versions/4.22/groups/M20.md
---
layout: group
group_id: M20
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

Configures auditd behavior when disk space runs low, ensuring audit data is not silently lost. Sets actions for disk errors, disk full conditions, and low space warnings.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `auditd-data-disk-error-action` | Set action on disk write errors (syslog) |
| `auditd-data-disk-full-action` | Set action when disk is full (halt) |
| `auditd-data-retention-admin-space-left-action` | Set admin space-left action (single) |
| `auditd-data-retention-space-left` | Configure space-left threshold |

## Verification

```bash
oc debug node/<node> -- chroot /host grep -E 'disk_error_action|disk_full_action|admin_space_left_action|space_left ' /etc/audit/auditd.conf
```
